# chumsky

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README2.md  build.rs  flake.nix  loka-tutorial-chunk.md  rust-toolchain.toml  tutorial.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: backtrack.rs  cbor.rs  json.pest  json.rs  lex.rs  parser.rs  pratt.rs  sample.json  tokens.txt  utils.rs
benches/samples/: pratt.txt  sample.cbor
chumsky/: Cargo.toml
chumsky-text/: Cargo.toml
chumsky-text/src/: char.rs  ext.rs  input.rs  lib.rs  regex.rs  text.rs
chumsky-util/: Cargo.toml
chumsky-util/src/: lib.rs
chumsky/benches/: backtrack.rs  cbor.rs
chumsky/examples/: brainfuck.rs  foo.rs  indent.rs  logos.rs  nano_rust.rs  sample.py
chumsky/src/: either.rs  extra.rs  input.rs  label.rs  lib.rs  primitive.rs  stream.rs  text.rs
examples/: brainfuck.rs  debug.rs  example.nrs  foo.rs  hello.bf  indent.rs  io.rs  json.rs  json_fast.rs  logos.rs  mini_ml.rs  nano_rust.rs  nested.rs  nested_spans.rs  pythonic.rs  sample.bf  sample.foo  sample.io  sample.json  sample.mini_ml  sample.nrs  zero-copy.rs
guide/: README.md  debugging.md  error_and_recovery.md  getting_started.md  intro.md  key_concepts.md  meet_the_parsers.md  recursion.md  technical_notes.md  tutorial.md
intro/: book.toml
intro/src/: SUMMARY.md  brainfuck.md  chumsky.md  combinator_table.md  error_recovery.md  examples.md  features.md  foo.md  getting_started.md  help.md  key_concepts.md  language_tutorial.md  parsers.md  parsing.md  technical_notes.md  what_combinators.md  why_combinators.md
intro/src/foo/: assignment.md  conclusion.md  expressions.md  functions.md  numbers.md  setup.md
src/: blanket.rs  bstr.rs  cache.rs  chain.rs  combinator.rs  container.rs  debug.rs  either.rs  error.rs  extension.rs  extra.rs  flatlist.rs  guide.rs  indent.rs  input.rs  inspector.rs  label.rs  lib.rs  number.rs  pratt.rs  pratt2.rs  primitive.rs  private.rs  problems.rs  recovery.rs  recursive.rs  regex.rs  span.rs  stream.rs  text.rs  tokio.rs  tutorial.rs  util.rs  visit.rs
src/error/: tests.rs
src/pratt/: ops.rs  state.rs
src/zero_copy/: blanket.rs  chain.rs  combinator.rs  container.rs  error.rs  extra.rs  input.rs  mod.rs  pratt.rs  primitive.rs  recovery.rs  recursive.rs  regex.rs  sliced.rs  span.rs  stream.rs  text.rs  visit.rs
tests/: arc.rs  box.rs  debug.rs  either.rs  iter.rs  memoization.rs  rc.rs  recursive.rs  regex.rs  todo.rs  unicode.rs  zero_copy.rs
tutorial/: getting_started.md  intro.md  key_concepts.md
