[package]
name = "chumsky-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { path = "../", features = ["extension"] }
chumsky-util = { path = "../chumsky-util" }
# Enables regex combinators
regex = { version = "1.7", optional = true }
unicode-ident = "1.0.9"
